--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     # rest of the job definition for dev environment
 
     env:            
-      AWS_DEFAULT_REGION: ${{ github.ref == 'refs/heads/main' ? 'ap-southeast-1' : 'ap-northeast-1' }}  # Dynamic Region
+      AWS_REGION: ${{ env.AWS_REGION }}
       ECR_REPOSITORY: jinnliong-terraform-ecr
       ECS_SERVICE: ecsdemo         
       ECS_CLUSTER: jinnliong-terraform-ecs                    
