--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    environment: ${{ github.ref == 'main' ? 'prod' : 'dev' }} # Environment Selection  
+    environment: ${{ github.ref == 'refs/heads/master' && 'prod' || 'dev' }}
 
     env:            
       AWS_DEFAULT_REGION: ${{ github.ref == 'refs/heads/main' ? 'ap-southeast-1' : 'ap-northeast-1' }}  # Dynamic Region
