--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,10 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    environment: ${{ github.ref == 'refs/heads/master' && 'prod' || 'dev' }}
+    environment: ${{ github.ref == 'refs/heads/main' && 'prod' || 'dev' }}
 
     env:            
-      AWS_DEFAULT_REGION: ${{ github.ref == 'refs/heads/main' ? 'ap-southeast-1' : 'ap-northeast-1' }}  # Dynamic Region
+      AWS_REGION: ${{ env.AWS_REGION }}
       ECR_REPOSITORY: jinnliong-terraform-ecr
       ECS_SERVICE: ecsdemo         
       ECS_CLUSTER: jinnliong-terraform-ecs                    
