--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     environment: ${{ github.ref == 'refs/heads/main' && 'prod' || 'dev' }}
 
     env:            
-      AWS_REGION: ${{ env.AWS_REGION }}
+      AWS_REGION: ${{ github.ref == 'refs/heads/main' && 'ap-southeast-1' || 'ap-northeast-1' }}  # Dynamic Region
       ECR_REPOSITORY: jinnliong-terraform-ecr
       ECS_SERVICE: ecsdemo         
       ECS_CLUSTER: jinnliong-terraform-ecs                    
